--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 // Add your dependencies here
 
 dependencies {
-    compileOnly("com.github.GTNewHorizons:CraftTweaker:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:CraftTweaker:3.2.5:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:ZenScript:master-SNAPSHOT") {
